// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form backlink component should render disabled when isDisabled is passed 1`] = `
<BackLink
  action="/SOME/URL"
  disabled={true}
  label="Back"
>
  <p>
    <Link
      className="govuk-back-link"
      disabled={true}
      replace={false}
      to="/SOME/URL"
    >
      <a
        className="govuk-back-link"
        disabled={true}
        href="/SOME/URL"
        onClick={[Function]}
      >
        Back
      </a>
    </Link>
  </p>
</BackLink>
`;

exports[`Form backlink component should render with additional styles when className is passed 1`] = `
<BackLink
  action="/SOME/URL"
  className="test-class"
  disabled={false}
  label="Back"
>
  <p>
    <Link
      className="govuk-back-link test-class"
      disabled={false}
      replace={false}
      to="/SOME/URL"
    >
      <a
        className="govuk-back-link test-class"
        disabled={false}
        href="/SOME/URL"
        onClick={[Function]}
      >
        Back
      </a>
    </Link>
  </p>
</BackLink>
`;

exports[`Form backlink component should render with correct label when passed 1`] = `
<BackLink
  action="/SOME/URL"
  disabled={false}
  label="MY_LABEL"
>
  <p>
    <Link
      className="govuk-back-link"
      disabled={false}
      replace={false}
      to="/SOME/URL"
    >
      <a
        className="govuk-back-link"
        disabled={false}
        href="/SOME/URL"
        onClick={[Function]}
      >
        MY_LABEL
      </a>
    </Link>
  </p>
</BackLink>
`;

exports[`Form backlink component should render with default props 1`] = `
<BackLink
  action="/SOME/URL"
  disabled={false}
  label="Back"
>
  <p>
    <Link
      className="govuk-back-link"
      disabled={false}
      replace={false}
      to="/SOME/URL"
    >
      <a
        className="govuk-back-link"
        disabled={false}
        href="/SOME/URL"
        onClick={[Function]}
      >
        Back
      </a>
    </Link>
  </p>
</BackLink>
`;
